// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attach() attach("") throws error 1`] = `
"The provided selector is invalid.
Expects a CSS selector, a Node element, a NodeList, an HTMLCollection or an array.
See: https://github.com/francoischalifour/medium-zoom"
`;

exports[`browser events click on image 1`] = `
<body
  class="medium-zoom--open"
>
  <img
    class="medium-zoom-image"
    style="visibility: hidden;"
  />
  <div
    class="medium-zoom-overlay"
    style="background-color: rgb(255, 255, 255);"
  />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
</body>
`;

exports[`browser events click on overlay 1`] = `
<body
  class=""
>
  <img
    class="medium-zoom-image"
    style=""
  />
</body>
`;

exports[`browser events closes on escape 1`] = `
<body
  class=""
>
  <img
    class="medium-zoom-image"
    style=""
  />
</body>
`;

exports[`browser events does not close on other keys 1`] = `
<body
  class="medium-zoom--open"
>
  <img
    class="medium-zoom-image"
    style="visibility: hidden;"
  />
  <div
    class="medium-zoom-overlay"
    style="background-color: rgb(255, 255, 255);"
  />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
</body>
`;

exports[`close() close() twice does not throw and renders correctly 1`] = `
<body
  class=""
>
  <img
    class="medium-zoom-image"
    style=""
  />
</body>
`;

exports[`close() close() with \`data-zoom-target\` renders correctly 1`] = `
<body
  class=""
>
  <img
    class="medium-zoom-image"
    data-zoom-target="image-hd.jpg"
    style=""
  />
</body>
`;

exports[`close() mediumZoom({ template }).close() renders correctly 1`] = `
<body
  class=""
>
  <template />
  <img
    class="medium-zoom-image"
    style=""
  />
</body>
`;

exports[`close() mediumZoom(Node).close() renders correctly 1`] = `
<body
  class=""
>
  <img
    class="medium-zoom-image"
    style=""
  />
</body>
`;

exports[`close() mediumZoom(String).close() renders correctly 1`] = `
<body
  class=""
>
  <img
    class="medium-zoom-image"
    style=""
  />
  <img
    class="medium-zoom-image"
  />
</body>
`;

exports[`detach() detach() an opened zoom closes the zoom and detaches images 1`] = `
<body
  class=""
>
  <img
    class=""
    style=""
  />
</body>
`;

exports[`mediumZoom() mediumZoom(selector) selector mediumZoom("") throws 1`] = `
"The provided selector is invalid.
Expects a CSS selector, a Node element, a NodeList, an HTMLCollection or an array.
See: https://github.com/francoischalifour/medium-zoom"
`;

exports[`open() mediumZoom({ background }).open() renders correctly 1`] = `
<body
  class="medium-zoom--open"
>
  <img
    class="medium-zoom-image"
    style="visibility: hidden;"
  />
  <div
    class="medium-zoom-overlay"
    style="background-color: rgb(186, 218, 85);"
  />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
</body>
`;

exports[`open() mediumZoom({ container: Node }).open() renders correctly 1`] = `
<body
  class="medium-zoom--open"
>
  <div />
  <img
    class="medium-zoom-image"
    style="visibility: hidden;"
  />
  <div
    class="medium-zoom-overlay"
    style="background-color: rgb(255, 255, 255);"
  />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
</body>
`;

exports[`open() mediumZoom({ container: Object }).open() renders correctly 1`] = `
<body
  class="medium-zoom--open"
>
  <img
    class="medium-zoom-image"
    style="visibility: hidden;"
  />
  <div
    class="medium-zoom-overlay"
    style="background-color: rgb(255, 255, 255);"
  />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
</body>
`;

exports[`open() mediumZoom({ container: String }).open() renders correctly 1`] = `
<body
  class="medium-zoom--open"
>
  <div />
  <img
    class="medium-zoom-image"
    style="visibility: hidden;"
  />
  <div
    class="medium-zoom-overlay"
    style="background-color: rgb(255, 255, 255);"
  />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
</body>
`;

exports[`open() mediumZoom({ template: Node }).open() renders correctly 1`] = `
<body
  class="medium-zoom--open"
>
  <template />
  <img
    class="medium-zoom-image"
    style="visibility: hidden;"
  />
  <div
    class="medium-zoom-overlay"
    style="background-color: rgb(255, 255, 255);"
  />
  <div />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
</body>
`;

exports[`open() mediumZoom({ template: String }).open() renders correctly 1`] = `
<body
  class="medium-zoom--open"
>
  <template />
  <img
    class="medium-zoom-image"
    style="visibility: hidden;"
  />
  <div
    class="medium-zoom-overlay"
    style="background-color: rgb(255, 255, 255);"
  />
  <div />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
</body>
`;

exports[`open() open() a SVG renders correctly 1`] = `
<body
  class="medium-zoom--open"
>
  <img
    class="medium-zoom-image"
    src="vector.svg"
    style="visibility: hidden;"
  />
  <div
    class="medium-zoom-overlay"
    style="background-color: rgb(255, 255, 255);"
  />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    src="vector.svg"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
</body>
`;

exports[`open() open() renders correctly 1`] = `
<body
  class="medium-zoom--open"
>
  <img
    class="medium-zoom-image"
    style="visibility: hidden;"
  />
  <img
    class="medium-zoom-image"
  />
  <div
    class="medium-zoom-overlay"
    style="background-color: rgb(255, 255, 255);"
  />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
</body>
`;

exports[`open() open() twice does not zoom twice 1`] = `
<body
  class="medium-zoom--open"
>
  <img
    class="medium-zoom-image"
    style="visibility: hidden;"
  />
  <div
    class="medium-zoom-overlay"
    style="background-color: rgb(255, 255, 255);"
  />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
</body>
`;

exports[`open() open() with \`data-zoom-target\` renders correctly 1`] = `
<body
  class="medium-zoom--open"
>
  <img
    class="medium-zoom-image"
    data-zoom-target="image-hd.jpg"
    src="image.jpg"
    style="visibility: hidden;"
  />
  <div
    class="medium-zoom-overlay"
    style="background-color: rgb(255, 255, 255);"
  />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    data-zoom-target="image-hd.jpg"
    src="image.jpg"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    data-zoom-target="image-hd.jpg"
    src="image-hd.jpg"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
</body>
`;

exports[`open() open() with \`srcset\` renders correctly 1`] = `
<body
  class="medium-zoom--open"
>
  <img
    class="medium-zoom-image"
    src="image.jpg"
    srcset="image-300x200.jpg 300w, image-600x400.jpg 600w, image-800x500.jpg 800w, image-1000x650.jpg 1000w, image-1200x800.jpg 1200w"
    style="visibility: hidden;"
  />
  <div
    class="medium-zoom-overlay"
    style="background-color: rgb(255, 255, 255);"
  />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    src="image.jpg"
    srcset="image-300x200.jpg 300w, image-600x400.jpg 600w, image-800x500.jpg 800w, image-1000x650.jpg 1000w, image-1200x800.jpg 1200w"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
</body>
`;

exports[`toggle() toggle() once renders correctly 1`] = `
<body
  class="medium-zoom--open"
>
  <img
    class="medium-zoom-image"
    style="visibility: hidden;"
  />
  <div
    class="medium-zoom-overlay"
    style="background-color: rgb(255, 255, 255);"
  />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
</body>
`;

exports[`toggle() toggle() twice renders correctly: closed 1`] = `
<body
  class=""
>
  <img
    class="medium-zoom-image"
    style=""
  />
</body>
`;

exports[`toggle() toggle() twice renders correctly: opened 1`] = `
<body
  class="medium-zoom--open"
>
  <img
    class="medium-zoom-image"
    style="visibility: hidden;"
  />
  <div
    class="medium-zoom-overlay"
    style="background-color: rgb(255, 255, 255);"
  />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
</body>
`;
